# allegro

./: .gitignore  CLAUDE.md  Cargo.toml  LOOKUP_FIELDS_TODO.md  README.md  TODO.md  another.db  rustfmt.toml
crates/allegro/: Cargo.toml
crates/allegro/src/: main.rs
crates/allegro_cwr/: Cargo.toml
crates/allegro_cwr/src/: ascii_io.rs  cwr_handler.rs  cwr_record.rs  cwr_registry.rs  domain_types.rs  error.rs  lib.rs  parser.rs  parsing_macro.rs  record_handlers.rs  report.rs  test_utils.rs  util.rs  validators.rs
crates/allegro_cwr/src/domain_types/: agreement_role_code.rs  agreement_type.rs  boolean.rs  character_set.rs  common.rs  composite_component_count.rs  composite_type.rs  currency_code.rs  cwr_revision.rs  cwr_version.rs  cwr_version_number.rs  date.rs  ean.rs  edi_standard_version.rs  enums.rs  excerpt_type.rs  flag.rs  group_count.rs  group_id.rs  identifier_type.rs  identifiers.rs  inclusion_exclusion_indicator.rs  instrument_code.rs  intended_purpose.rs  ipi_base_number.rs  ipi_name_number.rs  isrc.rs  isrc_validity_indicator.rs  language_code.rs  language_dialect.rs  lookup_placeholder.rs  lyric_adaptation.rs  media_type.rs  message_level.rs  message_type.rs  mod.rs  monetary_value.rs  music_arrangement.rs  musical_work_distribution_category.rs  non_roman_alphabet.rs  (+32 more)
crates/allegro_cwr/src/lookups/: agreement_role_codes.rs  agreement_types.rs  composite_types.rs  currency_codes.rs  excerpt_types.rs  instrument_codes.rs  intended_purposes.rs  language_codes.rs  language_dialect_codes.rs  lyric_adaptations.rs  media_types.rs  mod.rs  music_arrangements.rs  musical_work_distribution_categories.rs  publisher_types.rs  society_codes.rs  society_codes_extended.rs  society_members.rs  standard_instrumentations.rs  text_music_relationships.rs  tis_codes.rs  transaction_statuses.rs  usa_license_indicators.rs  version_types.rs  work_types.rs  writer_designations.rs
crates/allegro_cwr/src/parsing/: field_parse.rs  field_write.rs  mod.rs  warning.rs  warning_level.rs
crates/allegro_cwr/src/records/: ack.rs  agr.rs  alt.rs  ari.rs  com.rs  ewt.rs  grh.rs  grt.rs  hdr.rs  ind.rs  ins.rs  ipa.rs  mod.rs  msg.rs  nat.rs  net.rs  now.rs  npa.rs  npn.rs  npr.rs  nwn.rs  nwr.rs  orn.rs  per.rs  pwr.rs  rec.rs  spt.rs  (+8 more)
crates/allegro_cwr/tests/: crlf_line_endings_test.rs  non_roman_alphabet_integration.rs
crates/allegro_cwr_json/: Cargo.toml
crates/allegro_cwr_json/src/: lib.rs  main.rs
crates/allegro_cwr_sqlite/: Cargo.toml
crates/allegro_cwr_sqlite/src/: connection.rs  domain_conversions.rs  error.rs  lib.rs  main.rs  operations.rs  record_handlers.rs  report.rs  schema.sql  statements.rs
(+81 files in other folders)
