[package]
name = "allegro"
version = "0.1.0"
edition = "2024"
description = "CWR file parser CLI tool"

[dependencies]
allegro_cwr = { path = "../allegro_cwr" }
allegro_cwr_sqlite = { path = "../allegro_cwr_sqlite" }
allegro_cwr_json = { path = "../allegro_cwr_json" }
lexopt = "0.3.1"
log = "0.4"
env_logger = "0.11"