[package]
name = "allegro_cwr_sqlite"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "SQLite database operations for CWR (Common Works Registration) files"

[dependencies]
rusqlite = { version = "0.36.0", features = ["bundled", "serde_json"] }
allegro_cwr = { path = "../allegro_cwr" }
allegro_cwr_cli = { path = "../allegro_cwr_cli" }
log = "0.4"
lexopt = "0.3.1"
env_logger = "0.11"

[[bin]]
name = "cwr-sqlite"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.0"